# purpy2

./: .gitignore  Cargo.toml  Readme.md  index.html
create_texture_atlas/: Cargo.toml
create_texture_atlas/src/: main.rs
docs/: CNAME  index.html
docs/purpy_wasm/: package.json  purpy_wasm.d.ts  purpy_wasm.js  purpy_wasm_bg.js  purpy_wasm_bg.wasm  purpy_wasm_bg.wasm.d.ts
package_assets/: Cargo.toml
package_assets/src/: main.rs
purpy/: Cargo.toml
purpy/src/: args.rs  constants.rs  cursor.rs  door.rs  filemanager.rs  font.rs  geometry.rs  imagemanager.rs  inputmanager.rs  killscreen.rs  level.rs  levelselect.rs  lib.rs  menu.rs  platform.rs  player.rs  properties.rs  rendercontext.rs  renderer.rs  scene.rs  sdlmain.rs  slope.rs  smallintmap.rs  smallintset.rs  soundmanager.rs  sprite.rs  stagemanager.rs  star.rs  switchstate.rs  tilemap.rs  tileset.rs  uibutton.rs  utils.rs
purpy/src/sdl/: mod.rs  sdlrenderer.rs  sdlsoundmanager.rs
purpy/src/wgpu/: mod.rs  pipeline.rs  renderer.rs  shader.rs  shader.wgsl  texture.rs  wgpumain.rs
purpy_sdl/: Cargo.toml
purpy_sdl/src/: main.rs
purpy_wasm/: Cargo.toml  index.html
purpy_wasm/src/: lib.rs  websoundplayer.rs
purpy_wgpu/: Cargo.toml
purpy_wgpu/src/: main.rs
purpy_winit/: Cargo.toml
purpy_winit/src/: main.rs
src/: constants.rs  door.rs  filemanager.rs  font.rs  geometry.rs  image_manager.rs  imagemanager.rs  inputmanager.rs  killscreen.rs  level.rs  levelindex.rs  levelselect.rs  lib.rs  main.rs  platform.rs  player.rs  properties.rs  rendercontext.rs  renderer.rs  scene.rs  sdlmain.rs  sdlrenderer.rs  slope.rs  smallintmap.rs  smallintset.rs  soundmanager.rs  sprite.rs  stagemanager.rs  star.rs  switchstate.rs  tilemap.rs  tileset.rs  utils.rs  warp.rs
src/sdl/: mod.rs  sdlmain.rs
src/wgpu/: mod.rs  pipeline.rs  renderer.rs  shader.rs  shader.wgsl  texture.rs  wgpumain.rs  winitmain.rs
www/purpy_wasm/: purpy_wasm.d.ts  purpy_wasm_bg.wasm.d.ts
