[package]
name = "purpy2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version="4.4.12", features=["derive"]}
quick-xml = {version="0.31.0", features=["serialize"]}
sdl2 = "0.36.0"
serde = {version="1.0.194", features=["derive"]}
