[package]
name = "purpy2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"

anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
clap = {version="4.4.12", features=["derive"]}
env_logger = "0.10.2"
flate2 = "1.0.28"
gilrs = "0.10.4"
glob = "0.3.1"
log = "0.4.20"
num-traits = "0.2.17"
pollster = "0.3"
quick-xml = {version="0.31.0", features=["serialize"]}
rand = "0.8.5"
raw-window-handle = "0.5.0"
serde = {version="1.0.194", features=["derive"]}
tar = "0.4.40"
thiserror = "1.0.56"
wgpu = "0.18"
winit = {version="0.29.10", features=["rwh_05"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl2 = {version="0.36.0", features=["image", "raw-window-handle"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}