[package]
name = "purpy"
version = "0.1.0"
edition = "2021"

[features]
default = ["sdl2", "wgpu", "winit"]

[dependencies]
anyhow = "1.0"
bytemuck = {version="1.12", features=["derive"]}
cgmath = "0.18"
flate2 = "1.0.28"
gilrs = "0.10.4"
image = {version="0.24", default-features=false, features=["jpeg", "png"]}
log = "0.4.20"
num-traits = "0.2.17"
quick-xml = {version="0.31.0", features=["serialize"]}
rand = "0.8.5"
raw-window-handle = "0.5.0"
serde = {version="1.0.194", features=["derive"]}
tar = "0.4.40"
thiserror = "1.0.56"

sdl2 = {version="0.36.0", features=["image", "raw-window-handle"], optional=true}
wgpu = {version="0.18", optional=true}
winit = {version="0.29.10", features=["rwh_05"], optional=true}
