[package]
name = "purpy_sdl"
version = "0.1.0"
edition = "2021"

[dependencies]
purpy = { path="../purpy", default-features=false, features=["sdl2"] }

anyhow = "1.0"
clap = {version="4.4.12", features=["derive"]}
env_logger = "0.10.2"
sdl2 = {version="0.36.0", features=["image", "raw-window-handle"]}
