[package]
name = "purpy_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
purpy = { path="../purpy", default-features=false, features=["wgpu", "winit"] }

anyhow = "1.0"
log = "0.4.20"
winit = {version="0.29.10", features=["rwh_05"]}

console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}